--- a/learncss.html
+++ b/learncss.html
@@ -3,5 +3,7 @@
     <head>
         <title>Learning CSS</title>
     </head>
-    <body></body>
+    <body>
+        <h1 style="color:rgb(255, 0, 200); text-align: center">Learning CSS is Fun!</h1>
+    </body>
 </html>
