--- a/learncss.html
+++ b/learncss.html
@@ -2,6 +2,11 @@
 <html>
     <head>
         <title>Learning CSS</title>
+        <style>
+            body{
+                background-color: mistyrose;
+            }
+        </style>
     </head>
     <body>
         <h1 style="color:rgb(255, 0, 200); text-align: center">Learning CSS is Fun!</h1>
