--- a/learncss.html
+++ b/learncss.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- External CSS -->
         <link rel="stylesheet" href="style.css" />
         <title>Learning CSS</title>
+        <!-- Internal CSS -->
         <style>
             body{
                 background-color: mistyrose;
