--- a/learncss.html
+++ b/learncss.html
@@ -13,5 +13,6 @@
     </head>
     <body>
         <h1 style="color:rgb(255, 0, 200); text-align: center">Learning CSS is Fun!</h1>
+        <h2>My name is Shann Nainggolan</h2>
     </body>
 </html>
