--- a/learncss.html
+++ b/learncss.html
@@ -4,15 +4,22 @@
         <!-- External CSS -->
         <link rel="stylesheet" href="style.css" />
         <title>Learning CSS</title>
-        <!-- Internal CSS -->
+        <!-- Internal CSS  -->
         <style>
             body{
-                background-color: mistyrose;
+                background-color:beige
+            }
+            #today{
+                border-bottom: 10px dashed darkblue;
+            }
+            .center {
+                text-align: center;
             }
         </style>
     </head>
     <body>
         <h1 style="color:rgb(255, 0, 200); text-align: center">Learning CSS is Fun!</h1>
-        <h2>My name is Shann Nainggolan</h2>
+        <h2 class="center">My name is Shann Nainggolan</h2>
+        <h3 id="today"class="center">today us friday</h3>
     </body>
 </html>
