--- a/learncss.html
+++ b/learncss.html
@@ -15,6 +15,9 @@
             .center {
                 text-align: center;
             }
+            h1 {
+                border-radius: ; 10px;  
+            }
         </style>
     </head>
     <body>
