--- a/learncss.html
+++ b/learncss.html
@@ -7,7 +7,7 @@
         <!-- Internal CSS  -->
         <style>
             body{
-                background-color:beige
+                background-image: url("uhuy.jpg");
             }
             #today{
                 border-bottom: 10px dashed darkblue;
