--- a/learncss.html
+++ b/learncss.html
@@ -16,7 +16,7 @@
                 text-align: center;
             }
             h1 {
-                border-radius: ; 10px;  
+                border-radius: 10px;  
             }
         </style>
     </head>
